[gd_scene load_steps=15 format=3 uid="uid://c2jvmhxpc10pn"]

[ext_resource type="Script" path="res://Scenes/Props/block.gd" id="1_ivuek"]
[ext_resource type="Texture2D" uid="uid://bfhuxcxtr1aep" path="res://Graphics/Props/BreakableBlockGlobal-Sheet.png" id="2_sem4v"]
[ext_resource type="AudioStream" uid="uid://c5r4q6q48gg3f" path="res://Audio/Sound/block break.ogg" id="3_ic10l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lfo1v"]
size = Vector2(16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wv0ft"]
atlas = ExtResource("2_sem4v")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfw73"]
atlas = ExtResource("2_sem4v")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qth5f"]
atlas = ExtResource("2_sem4v")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cp5gl"]
atlas = ExtResource("2_sem4v")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l31gc"]
atlas = ExtResource("2_sem4v")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0l2f4"]
atlas = ExtResource("2_sem4v")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3o5lx"]
atlas = ExtResource("2_sem4v")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqm2l"]
atlas = ExtResource("2_sem4v")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_x7h62"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wv0ft")
}],
"loop": true,
"name": &"Default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfw73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qth5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cp5gl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l31gc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0l2f4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3o5lx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqm2l")
}],
"loop": false,
"name": &"Shimmer",
"speed": 20.0
}]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_fwebu"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("3_ic10l")

[node name="Block" type="StaticBody2D"]
collision_layer = 4
collision_mask = 9
script = ExtResource("1_ivuek")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_lfo1v")
one_way_collision_margin = 0.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_x7h62")
animation = &"Shimmer"
autoplay = "Default"
frame = 6
frame_progress = 1.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_fwebu")
volume_db = 15.0
bus = &"Sound"

[node name="ShineTimer" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="ShineTimer" to="." method="_on_shine_timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
